kubernetes/apps/external/proxmox-ve/resources/endpoint.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app proxmox-ve
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
    kubernetes.io/service-name: *app
    endpointslice.kubernetes.io/managed-by: *app
addressType: IPv4
endpoints:
  - addresses:
      - 10.73.1.10
      - 10.73.1.20
      - 10.73.1.30
    conditions:
      ready: true
ports:
  - name: https
    port: 8006
