kubernetes/apps/external/proxmox-ve/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-ve
spec:
  ports:
  - name: https
    port: 443
    targetPort: 8006
