kubernetes/apps/external/proxmox-ve/resources/tlsroute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: &app proxmox-ve
spec:
  hostnames: ["pve.${DOMAIN_APP_APPS}"]
  parentRefs:
    - name: services
      namespace: kube-system
      sectionName: tls-app-apps
  rules:
    - backendRefs:
        - name: *app
          port: 443
